[package]
name = "image_processing"
version = "0.2.0"
authors = ["lazypassion <25536767+lazypassion@users.noreply.github.com>"]
edition = "2018"

[dependencies]
image = "0.23.11"

[features]
display-window = ["sdl2"]

[dependencies.sdl2]
version = "0.32.1"
default-features = false
features = ["bundled"]
optional = true 

[dev-dependencies]
criterion = "0.3"

[profile.dev]
opt-level = 2
codegen-units = 16

[profile.release]
opt-level = 3 
lto = true
codegen-units = 1

# benchmarks
[[bench]]
name = "sobel"
harness = false

[[bench]]
name = "blur"
harness = false

[[bench]]
name = "transpose"
harness = false

[[bench]]
name = "pixel_ops"
harness = false